--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.android.support:design:22.2.0'
 }
