--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         </activity>
         <activity android:name=".SignupActivity" >
         </activity>
+        <activity
+            android:name=".QuestionsActivity"
+            android:label="@string/title_activity_questions" >
+        </activity>
     </application>
 
 </manifest>
