Added Answers class and activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".QuestionsActivity"
             android:label="@string/title_activity_questions" >
         </activity>
+        <activity
+            android:name=".AnswersActivity"
+            android:label="@string/title_activity_answers" >
+        </activity>
     </application>
 
 </manifest>
